--- a/qlmd/qlmd-Info.plist
+++ b/qlmd/qlmd-Info.plist
@@ -15,6 +15,32 @@
 			</array>
 		</dict>
 	</array>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeIdentifier</key>
+			<string>net.daringfireball.markdown</string>
+			<key>UTTypeReferenceURL</key>
+			<string>http://daringfireball.net/projects/markdown</string>
+			<key>UTTypeDescription</key>
+			<string>Markdown file</string>
+			<key>UTTypeConformsTo</key>
+			<array>
+		    <string>public.text</string>
+			</array>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+		    <key>public.filename-extension</key>
+		    <array>
+		      <string>markdown</string>
+		      <string>mdown</string>
+		      <string>mkdn</string>
+		      <string>mkd</string>
+		      <string>md</string>
+		    </array>
+			</dict>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
